Closed Bug 1596193 Opened 6 years ago Closed 6 years ago

Double-clicking in the Library search bar should not maximise the window

Categories

(Firefox :: Bookmarks & History, defect, P2)

72 Branch
x86_64
macOS
defect

Tracking

()

VERIFIED FIXED
Firefox 72
Tracking Status
firefox-esr68 --- unaffected
firefox70 --- unaffected
firefox71 --- verified
firefox72 --- verified

People

(Reporter: jbg, Assigned: ntim)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.14; rv:68.0) Gecko/20100101 Firefox/68.0

Steps to reproduce:

Opened the Library via History -> Show All History
Double-clicked on a word in the search bar at the top right of the window in order to select the word.

Actual results:

The word was selected, but the window also maximised.

Expected results:

The window should not have maximised.

(note that attempting to select text in the search box also moves the window, this seems likely to be the same root cause)

72.0a1 (2019-11-13) (64-bit)

OS: Unspecified → macOS
Hardware: Unspecified → x86_64
Version: 68 Branch → 72 Branch

Work fine in 72.0a1 (2019-11-14) x64 on Win10 1909.

Component: Untriaged → Bookmarks & History

I'm guessing this is possibly Mac-only.

13:45.83 INFO: Last good revision: f0292f2eb13953c0ec6d821a96d550c3f4f580e7
13:45.83 INFO: First bad revision: aa7f20ae769925c032b117c1b4cc7c3db1f16780
13:45.83 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=f0292f2eb13953c0ec6d821a96d550c3f4f580e7&tochange=aa7f20ae769925c032b117c1b4cc7c3db1f16780

=> Bug 1581956 Make search-textbox not use the <textbox> tag

:ntim, could you have a look please?

Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(ntim.bugs)
Priority: -- → P2
Regressed by: 1581956
Keywords: regression
Assignee: nobody → ntim.bugs
Flags: needinfo?(ntim.bugs)
Attachment #9109006 - Attachment description: Bug 1596193 - Replace outdated references to XUL textbox in CSS. r=dao → Bug 1596193 - Replace outdated references to XUL textbox. r=dao
Pushed by ntim.bugs@gmail.com: https://hg.mozilla.org/integration/autoland/rev/956e4283483b Replace outdated references to XUL textbox. r=dao

Comment on attachment 9109006 [details]
Bug 1596193 - Replace outdated references to XUL textbox. r=dao

Beta/Release Uplift Approval Request

  • User impact if declined: Double clicking the library search box will maximize the library window.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: see comment 0
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Simple CSS change
  • String changes made/needed: none
Attachment #9109006 - Flags: approval-mozilla-beta?
Flags: qe-verify+
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 72
QA Whiteboard: [qa-triaged]

Comment on attachment 9109006 [details]
Bug 1596193 - Replace outdated references to XUL textbox. r=dao

Low risk CSS fix , uplift approved for 71 beta 11, thanks.

Attachment #9109006 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Hello! Reproduced the issue on macOS 10.14 using Firefox 72.0a1 (20191113215041) and STR from comment 0.
The issue is verified fixed using Firefox 72.0a1 (20191119215132) and Firefox 71.0b11 (20191118154140) on macOS 10.14. After following the STR from comment 0 the Library window doesn't get maximized when double-clicking the text and neither moved when trying to select parts of the text inside the "Search History", "Search Downloads" and "Search Bookmarks" bar.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: