Bug 1596193 - Replace outdated references to XUL textbox. r=dao a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D53177