accessible/html/HTMLFormControlAccessible.h
@@ -98,8 +98,8 @@ class HTMLTextFieldAccessible final : public HyperTextAccessibleWrap {
   virtual ENameValueFlag NativeName(nsString& aName) const override;
 
   /**
-   * Return a widget element this input is part of, for example, XUL:textbox or
-   * HTML:input@type="number".
+   * Return a widget element this input is part of, for example, search-textbox
+   * or HTML:input@type="number".
    */
   nsIContent* BindingOrWidgetParent() const {
     nsIContent* el = mContent->GetBindingParent();
